# task02--zoo-rivkaadler1

./: Clownfish.cpp  Clownfish.h  Direction.h  Lion.cpp  Lion.h  Main.cpp  Monkey.cpp  Monkey.h  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  README.md  Zoo.cpp  Zoo.h  ZooAnimal.cpp  ZooAnimal.h
Debug/: Project1.exe.recipe  Project1.ilk  Project1.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
task_week03_rivka_adler/: CMakeLists.txt
task_week03_rivka_adler/include/: CMakeLists.txt  Clownfish.h  Lion.h  Location.h  Monkey.h  Zoo.h  ZooAnimal.h
task_week03_rivka_adler/src/: CMakeLists.txt  Clownfish.cpp  Lion.cpp  Location.cpp  Main.cpp  Monkey.cpp  Zoo.cpp  ZooAnimal.cpp
